# ez-vps

./: .gitattributes  .gitignore  Cargo.toml  README.md  install.sh  servers.example.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  main.rs  proxy.rs  ssh.rs
src/commands/: app.rs  check.rs  deploy.rs  init.rs  mod.rs  status.rs  uninstall.rs  update.rs  version.rs
src/ui/: mod.rs  progress.rs  prompts.rs  summary.rs
src/utils/: output.rs
